syntax = "proto3";
option go_package=".;article";
package stream;

//文章管理添加
message ArticleAddReq {
  string content=1;//文章内容
  uint32 cid=2;//分类id
  string title=3;//文章标题
  string author=4;//文章作者
  string imageInput=5;//文章图片
  string synopsis=6;//文章简介
  string hide=7;//是否隐藏

}
message ArticleAddResp {
  string success = 1;
}
//文章分类添加

message CategoryAddReq {
  uint32 pid=1;//分类id
  string title=3;//分类名称
  string intr=4;//分类简介
  string imageInput=5;//分类图片
  uint32 sort=6;//排序
  uint32 status=2;//状态

}
message CategoryAddResp {
  string success = 1;
}

// 查询文章管理列表
message ArticleListReq {

}
message ArticleListResp {

  repeated List list = 1;
}
message List{
  string content=1;//文章内容
  uint32 cid=2;//分类id
  string title=3;//文章标题
  string author=4;//文章作者
  string imageInput=5;//文章图片
  string synopsis=6;//文章简介
  string hide=7;//是否隐藏
}
service article {
  rpc ArticleRelease(ArticleAddReq) returns (ArticleAddResp);//文章管理添加
  rpc CategoryAdd(CategoryAddReq) returns (CategoryAddResp);//文章分类添加
  rpc ArticleList(ArticleListReq) returns (ArticleListResp);// 查询文章管理列表
}